# KatanaToneStream

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  KatanaToneStream.spec  LICENSE  README.md  config.example.ini  main.py  pyproject.toml
.github/workflows/: build.yml
assets/: base_template.json
src/katana_tonestream/: address_map_parser.py  app.py  art_resolver.py  cache.py  config.py  fetcher.py  katana_catalog.py  katana_channels.py  katana_midi.py  llm_generator.py  llm_providers.py  logging_setup.py  models.py  parser.py  patch_builder.py  paths.py  service.py
src/katana_tonestream/ui/: app_shell.py  generate_dialog.py  generate_panel.py  log_panel.py  patch_card.py  search_bar.py  settings_pane.py  slot_picker.py  theme.py
tests/: conftest.py  test_cache.py  test_channels.py  test_config.py  test_llm_generator.py  test_midi.py  test_parser.py  test_patch_builder.py  test_service.py  test_slot_picker.py
tools/: decode_capture.py  record_midi.ps1  record_midi.py  seed_test_patches.py  verify_send_against_capture.py
